# D2DraftNet-App

./: .gitignore  README.md  app.py  d2draftnet_app.py  pyproject.toml
d2draftnet_app/: DNN_model.py  __init__.py  config.py  download_hero_icons.py  embedding_model.py  load_model.py  routes.py
d2draftnet_app/static/css/: style.css
d2draftnet_app/templates/: index.html
models/: 7_37e_model.pth
tests/: test.py  test_1.py
