[tool.poetry]
name = "d2draftnet-app"
version = "0.1.0"
description = ""
authors = ["gkerr708 <gkerr708@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
flask = ">=3.1.0,<4.0.0"
requests = ">=2.32.3,<3.0.0"
beautifulsoup4 = ">=4.13.3,<5.0.0"
pandas = ">=2.2.3,<3.0.0"
torch = ">=2.6.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
