[tool.poetry]
name = "d2draftnet-app"
version = "0.1.1"
description = "A Dota 2 draft prediction app"
authors = ["gkerr708 <gkerr708@gmail.com>"]
readme = "README.md"
packages = [{include = "d2draftnet_app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"  # ✅ Restricts Python to versions that support PyInstaller
flask = "^3.1.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pandas = "^2.2.3"
torch = "^2.6.0"
pyinstaller = "^6.12.0"  # ✅ Allowed PyInstaller version
fastparquet = "^2024.11.0"
pyarrow = "^19.0.1"
d2draftnet = "0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
